# crococam

./: .gitignore  README.md  environment.yaml  example_mpc_reaching.py  example_ocp_reaching.py  gviewer_mpc.py  log_and_plot.py  ocp_def.py  ocp_reaching.py  ocp_utils.py  pinbullet.py  pyproject.toml  robot_utils.py  run_mpc_reaching.py  run_ocp_reaching.py
crococam/: __init__.py  gviewer_mpc.py  log_and_plot.py  ocp_def.py  ocp_utils.py  pin_utils.py  pinbullet.py  robot_utils.py
